bug squashing

--- a/src/app/catalog/catalog.component.css
+++ b/src/app/catalog/catalog.component.css
@@ -31,10 +31,10 @@ img {
 }
 
 .beastDiv {
-    display: flex;
-    overflow-y: auto;    
-    align-content: flex-start;
-    margin-top: 1px;
+  display: flex;
+  overflow-y: auto;
+  align-content: flex-start;
+  margin-top: 1px;
 }
 
 .mat-button {
@@ -50,8 +50,9 @@ img {
 }
 
 .beast-name {
-  font-family: 'know'; letter-spacing: 1px;
-  font-size: 16px;    
+  font-family: 'know';
+  letter-spacing: 1px;
+  font-size: 16px;
   padding: 5px 0 0 5px;
   line-height: 25px;
 }
@@ -62,63 +63,67 @@ img {
   align-items: center;
 }
 
+div {
+  scrollbar-color: grey transparent;
+}
+
 /* width */
 ::-webkit-scrollbar {
-    width: 1px;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: transparent 
-  }
-  
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: grey;
-    border-radius: 4px;
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: grey; 
-    border-radius: 4px;
-  }
+  width: 1px;
+}
 
-  .beast-outer-shell {
-    position: relative;
-  }
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent
+}
 
-  .add-to-quick-view-shell {
-    position: absolute;
-    padding: 5px;
-    z-index: 1;
-    right: 0;
-    border-radius: 25px;
-    transition: .6s;
-  }
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: grey;
+  border-radius: 4px;
+}
 
-  .add-to-quick-view-shell i {
-    font-size: 14px;
-    color: lightgray;
-  }
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: grey;
+  border-radius: 4px;
+}
 
-  .add-to-quick-view-shell:hover i {
-    color: black;
-    border-radius: 25px;
-  }
+.beast-outer-shell {
+  position: relative;
+}
 
-  .add-to-quick-view-shell:hover{
-    background: lightgray;
-  }
+.add-to-quick-view-shell {
+  position: absolute;
+  padding: 5px;
+  z-index: 1;
+  right: 0;
+  border-radius: 25px;
+  transition: .6s;
+}
 
-  .add-to-quick-view {
-    position: relative;
-    padding-left: 9px;
+.add-to-quick-view-shell i {
+  font-size: 14px;
+  color: lightgray;
+}
+
+.add-to-quick-view-shell:hover i {
+  color: black;
+  border-radius: 25px;
+}
+
+.add-to-quick-view-shell:hover {
+  background: lightgray;
+}
+
+.add-to-quick-view {
+  position: relative;
+  padding-left: 9px;
 }
 
 .add-to-quick-view .fa-square-plus {
-    position: absolute;
-    left: 0
+  position: absolute;
+  left: 0
 }
 
 .custom-catalog-shell {
@@ -129,7 +134,7 @@ img {
   width: 75px;
   border-top-right-radius: 3px;
   border-bottom-left-radius: 3px;
-  z-index: 99;
+  z-index: 95;
   background: #607d8b;
   display: flex;
   justify-content: space-around;
@@ -142,62 +147,63 @@ img {
   font-size: 30px;
 }
 
-  .context-menu {
-    padding: 5px 0px;
-    background: white;
-    border: 2px lightgrey solid;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    display: none;
+.context-menu {
+  padding: 5px 0px;
+  background: white;
+  border: 2px lightgrey solid;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  display: none;
+}
+
+.context-menu p {
+  width: 100%;
+  padding: 5px 25px;
+}
+
+.context-menu p:hover {
+  background-color: lightgray
+}
+
+.fa-dice {
+  margin-left: -4px;
+}
+
+.L-line {
+  position: relative;
+  margin-right: 7px;
+}
+
+.L-line span {
+  position: absolute;
+  border-left: 1px solid;
+  border-bottom: 1px solid;
+  width: 5px;
+  height: 23px;
+  top: -15px;
+}
+
+.drop-down-list:first-child .L-line span {
+  height: 19px;
+  top: -11px;
+}
+
+@media (max-width: 699px) {
+  .img-shell {
+    height: 200px;
+    width: 200px;
   }
 
-  .context-menu p {
-    width: 100%;
-    padding: 5px 25px;
-  }
-  
-  .context-menu p:hover {
-    background-color: lightgray
+  img {
+    width: 200px;
   }
 
-  .fa-dice {
-    margin-left: -4px;
+  h2 {
+    font-size: 35px;
   }
 
-  .L-line {
-    position: relative;
-    margin-right: 7px;
+  .beast-name {
+    font-size: 25px;
   }
-
-  .L-line span {
-    position: absolute;
-    border-left: 1px solid;
-    border-bottom: 1px solid;
-    width: 5px;
-    height: 23px;
-    top: -15px;
-  }
-
-  .drop-down-list:first-child .L-line span {
-    height: 19px;
-    top: -11px;
-  }
-
-  @media (max-width: 699px) { 
-    .img-shell {
-      height: 200px;
-      width: 200px;
-    }
-    
-    img {
-      width: 200px;
-    }
-
-    h2 {
-      font-size: 35px;
-    }
-    .beast-name {
-      font-size: 25px;
-    }
-  }
+}
